# Python_Machine_Learning

./: LICENSE
KNN/: KNN.ipynb
OTPErrorAgent/: AgentLLMOpenAI.ipynb
sqlAgent/django-api/: db.sqlite3  pyproject.toml
sqlAgent/django-api/info/: models.py
sqlAgent/django-api/info/migrations/: 0001_initial.py  0002_remove_pokemon_id_alter_pokemon_name.py
sqlAgent/django-api/pokemon/: settings.py
sqlAgent/notebook/: pyproject.toml  sqlAgent.ipynb
sqlAgent/notebook-pokemon/: pyproject.toml  sqlAgent.ipynb
