[project]
name = "django-api"
version = "0.1.0"
description = "Django API to call SQlite database for pokemons"
authors = [
    {name = "esteban-rj",email = "estebanelias27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false