[project]
name = "sqlagent"
version = "0.1.0"
description = "Agent to explora through SQL queries"
authors = [
    {name = "esteban-rj",email = "estebanelias27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain (==0.3.24)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "langchain-community (>=0.3.22,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false